# DIO-LUIZALABS

./: README.md
APIs Assicronas com FastAPI/: .env
APIs Assicronas com FastAPI/dio-blog/: main.py  pyproject.toml
Project/workout_api/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  requirements.txt
Project/workout_api/alembic/: env.py  script.py.mako
Project/workout_api/app/: main.py
Project/workout_api/app/core/: database.py
Project/workout_api/app/crud/: atleta.py
Project/workout_api/app/models/: atleta.py
Project/workout_api/app/routes/: atleta.py
Project/workout_api/app/schemas/: atleta.py
