[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Siqueira",email = "siqueiragomes75@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
